--- a/index.html
+++ b/index.html
@@ -11,5 +11,17 @@
 <p>当然是拓拓啦</p>
 <h2>你知道谁是地表最酷学霸吗？</h2>
 <p>当然也是拓拓啦</p>
+
+<p class=MsoNormal align=center style='text-align:center'><span
+style='font-size:12.0pt;font-family:宋体'>搜索引擎</span></p>
+<p class=MsoNormal align=center style='text-align:center'><span lang=EN-US
+style='font-size:12.0pt;font-family:宋体'>&nbsp;</span></p>
+<p class=MsoNormal align=center style='text-align:center'><span lang=EN-US
+style='font-size:12.0pt;font-family:宋体'><a href="http://www.baidu.com/"><span
+lang=EN-US><span lang=EN-US>百度</span></span></a></span></p>
+<p class=MsoNormal align=center style='text-align:center'><span lang=EN-US
+style='font-size:12.0pt;font-family:宋体'><a href="http://www.sogou.com/"><span
+lang=EN-US><span lang=EN-US>搜狗</span></span></a></span></p>
+
 </body>
 </html>
