--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@ body{font:12px/1.5 Microsoft yahei,\5b8b\4f53, georgia,verdana,helvetica,sans-se
                     <a target="_blank" href="##">网站统计</a> | 
                     <a target="_blank" href="##">手机版</a> | 
                     <span class="rights">Copyright ©360.cn. All Rights Reserved.</span> 
-                    <a href="http://www.miibeian.gov.cn/" rel="noreferrer" class="icp" target="_blank">京ICP证080047号</a> 
-                    <a href="http://www.bjgaj.gov.cn/web/" class="icp" target="_blank">京公网安备110000000006号</a>
+                    <a href="http://www.miibeian.gov.cn/" rel="noreferrer" class="icp" target="_blank">做博学之人</a> 
+                    <a href="http://www.bjgaj.gov.cn/web/" class="icp" target="_blank">养浩然正气</a>
 				</div>
 			</div>    	
 		</div>
