--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ body{font:12px/1.5 Microsoft yahei,\5b8b\4f53, georgia,verdana,helvetica,sans-se
 					<div id="longlong-frame">
 					    <div id="longlong">
 				          <ul>
-                            <li class="on" id="longlong-channel-home"><a href="#" target="_self" class="tab-item home">神话故事</a></li>
+                            <li class="on" id="longlong-channel-home"><a href="#" target="_self" class="tab-item home">我的主页</a></li>
                             <li id="longlong-channel-news"><a href="https://www.toutiao.com" class="tab-item news">神话研究</a></li>
                             <li id="longlong-channel-tv"><a href="http://kan.2345.com/?kmengkunsoftware" class="tab-item tv">节气民俗</a></li>
                             <li id="longlong-channel-movie"><a href="http://kan.2345.com/?kmengkunsoftware" class="tab-item movie">国学常识</a></li>
@@ -74,13 +74,13 @@ body{font:12px/1.5 Microsoft yahei,\5b8b\4f53, georgia,verdana,helvetica,sans-se
                                         <li><a href="https:www.zxxk.com">中学学科网</a></li>
                                         <li><a href="https://www.zxls.com/">历史园地</a></li>
                                         <li><a href="https://tv.cctv.com/lm/xwzk/">新闻周刊</a></li>
-                                        <li><a href="https://www.52doutu.cn">斗图表情包</a></li>
+                                        <li><a href="https://tv.cctv.com/lm/sjzk/">世界周刊</a></li>
                                         <li><a href="http://tool.mkblog.cn/shouji/">手机查询</a></li>
                                         <li><a href="https://translate.google.cn">在线翻译</a></li>
                                         <li><a href="http://www.kuaidi100.com">快递查询</a></li>
                                         <li><a href="http://tool.mkblog.cn/ocr/">文字识别</a></li>
                                         <li><a href="http://tool.mkblog.cn/tuchuang/">微博图床</a></li>
-                                        <li><a href="http://tool.mkblog.cn/count/">在线排版</a></li> 
+                                        <li><a href="https://www.zdic.net/">权威★汉典</a></li> 
                                     </ul>
                                 </div>
                             </div>
