--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@ body{font:12px/1.5 Microsoft yahei,\5b8b\4f53, georgia,verdana,helvetica,sans-se
                             </div>
                             <div class="panel">
                                 <div class="item">
-                                    <h3 class="subtitle yx"><a>继续教育</a></h3>
+                                    <h3 class="subtitle yx"><a>网络工程</a></h3>
                                     <ul class="list">
-                                        <li><a href="http:www.henanxuexi.com">河南学习网</a></li>
+                                        <li><a href="https://mp.weixin.qq.com/">微信公号平台</a></li>
                                         <li><a href="https://www.xueanquan.com/">安全教育</a></li>
                                         <li><a href="http://xiaoyouxi.360.cn/?src=yxjx">360小游戏</a></li>
                                         <li><a href="http://xiaoyouxi.360.cn/nvsheng/index.html">女生小游戏</a></li>
