--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ body{font:12px/1.5 Microsoft yahei,\5b8b\4f53, georgia,verdana,helvetica,sans-se
                                 <div class="item">
                                     <h3 class="subtitle yx"><a>网络工程</a></h3>
                                     <ul class="list">
-                                        <li><a href="https://mp.weixin.qq.com/">微信公号平台</a></li>
+                                        <li><a href="https://mp.weixin.qq.com/">公众号后台</a></li>
                                         <li><a href="https://www.xueanquan.com/">安全教育</a></li>
                                         <li><a href="http://xiaoyouxi.360.cn/?src=yxjx">360小游戏</a></li>
                                         <li><a href="http://xiaoyouxi.360.cn/nvsheng/index.html">女生小游戏</a></li>
