--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@ body{font:12px/1.5 Microsoft yahei,\5b8b\4f53, georgia,verdana,helvetica,sans-se
 					<div id="header-frame">
 						<div class="item-logo">
 							<a id="imgLogo" title="胡佳佳的导航4" href="" target="_self">
-                                <img src="https://i.loli.net/2019/04/07/5ca9b9b208703.png" />
-                            </a>
+                                                        <img src="https://i.loli.net/2019/04/07/5ca9b9b208703.png" />
+                                                        </a>
+							<body background="01.jpg"></body>
 						</div>
                         <div id="search">
                             <div class="form-group">
@@ -71,7 +72,7 @@ body{font:12px/1.5 Microsoft yahei,\5b8b\4f53, georgia,verdana,helvetica,sans-se
                                 <div class="item">
                                     <h3 class="subtitle sy"><a>学科资源</a></h3>
                                     <ul class="list">
-                                        <li><a href="https:www.zxxk.com">中学学科网</a></li>
+                                        <li><a href="https://www.zxxk.com/">中学学科网</a></li>
                                         <li><a href="https://www.zxls.com/">历史园地</a></li>
                                         <li><a href="https://tv.cctv.com/lm/xwzk/">新闻周刊</a></li>
                                         <li><a href="https://www.52doutu.cn">斗图表情包</a></li>
@@ -124,8 +125,8 @@ body{font:12px/1.5 Microsoft yahei,\5b8b\4f53, georgia,verdana,helvetica,sans-se
                                     <ul class="list">
                                         <li><a href="https://www.taobao.com/" class="green">淘宝</a></li>
                                         <li><a href="https://mp.weixin.qq.com/mp/appmsgalbum?__biz=Mzg3MzUxOTQ5OQ==&action=getalbum&album_id=2554721552387571713#wechat_redirect" style="color:red">视听资源</a></li>
-                                        <li><a href="http://dl.360safe.com/netunion/20140425/360sd_14478.exe">360杀毒</a></li>
-                                        <li><a href="http://dl.360safe.com/netunion/20140425/360se+14478+n4a1de2568d.exe">360安全浏览器</a></li>
+                                        <li><a href="https://tv.cctv.com/lm/xwzk/">新闻周刊</a></li>
+                                        <li><a href="https://tv.cctv.com/lm/sjzk/">世界周刊</a></li>
                                         <li><a href="https://im.qq.com/">腾讯QQ</a></li>
                                         <li><a href="http://lab.mkblog.cn/wallpaper/">高清壁纸</a></li>
                                         <li><a href="http://jifendownload.2345.cn/jifen_2345/iqiyi_kmengkunsoftware_198029.exe">爱奇艺</a></li>
@@ -143,7 +144,7 @@ body{font:12px/1.5 Microsoft yahei,\5b8b\4f53, georgia,verdana,helvetica,sans-se
                                     <ul class="list">
                                         <li><a href="https://www.zdic.net/">权威★汉典</a></li>
                                         <li><a href="https://www.gushiwen.cn/">古诗文网</a></li>
-                                        <li><a href="https://tv.cctv.com/lm/xwzk/">新闻周刊</a></li>
+                                        <li><a href="https://www.flvcd.com/">硕鼠下载器</a></li>
                                         <li><a href="http://zmdisk.ysepan.com/">郑码输入法</a></li>
                                         <li><a href="http://tool.mkblog.cn/shouji/">手机查询</a></li>
                                         <li><a href="https://translate.google.cn">在线翻译</a></li>
@@ -160,7 +161,7 @@ body{font:12px/1.5 Microsoft yahei,\5b8b\4f53, georgia,verdana,helvetica,sans-se
                                     <ul class="list">
                                         <li><a href="https://mp.weixin.qq.com/">公众号后台</a></li>
                                         <li><a href="https://www.xueanquan.com/">安全教育</a></li>
-                                        <li><a href="http://xiaoyouxi.360.cn/?src=yxjx">360小游戏</a></li>
+                                        <li><a href="https://www.runoob.com/">菜鸟学习社</a></li>
                                         <li><a href="http://xiaoyouxi.360.cn/nvsheng/index.html">女生小游戏</a></li>
                                         <li><a href="http://soyo.360.cn/zt/plants.html">植物战僵尸</a></li>
                                         <li><a href="http://xiaoyouxi.360.cn/index/heji">小游戏合集</a></li>
