--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@ body{font:12px/1.5 Microsoft yahei,\5b8b\4f53, georgia,verdana,helvetica,sans-se
 </style>
 </head>
 <body>
+<div>
+    <body background="01.jpg"></body>
+</div>
 <div id="doc">
     <div id="doc-view">
     	<div id="doc-bd">
