--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@ body{font:12px/1.5 Microsoft yahei,\5b8b\4f53, georgia,verdana,helvetica,sans-se
 </style>
 </head>
 <body>
-<div>
-    <body background="01.jpg"></body>
-</div>
 <div id="doc">
     <div id="doc-view">
     	<div id="doc-bd">
@@ -29,7 +26,7 @@ body{font:12px/1.5 Microsoft yahei,\5b8b\4f53, georgia,verdana,helvetica,sans-se
 					<div id="header-frame">
 						<div class="item-logo">
 							<a id="imgLogo" title="胡佳佳的导航4" href="" target="_self">
-                                                        <img src="https://i.loli.net/2019/04/07/5ca9b9b208703.png" />
+                                                        <img src="https://s1.ax1x.com/2022/10/07/x8KTCq.jpg" />
                                                         </a>
 						</div>
                         <div id="search">
