--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ body{font:12px/1.5 Microsoft yahei,\5b8b\4f53, georgia,verdana,helvetica,sans-se
                                         <li><a href="https://mp.weixin.qq.com/">公众号后台</a></li>
                                         <li><a href="https://www.xueanquan.com/">安全教育</a></li>
                                         <li><a href="https://www.runoob.com/">菜鸟学习社</a></li>
-                                        <li><a href="http://xiaoyouxi.360.cn/nvsheng/index.html">女生小游戏</a></li>
+                                        <li><a href="https://imgse.com/">免费图床</a></li>
                                         <li><a href="http://soyo.360.cn/zt/plants.html">植物战僵尸</a></li>
                                         <li><a href="http://xiaoyouxi.360.cn/index/heji">小游戏合集</a></li>
                                         <li><a href="http://g.360.cn/zt/xiuxian.html">休闲游戏</a></li>
