--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	
 	  <div><img src="https://s1.ax1x.com/2022/10/07/x8KTCq.jpg">
 		   <!--style="background-color:#07553A; color:#CFD468; width:90%; font-weight:bold; text-align:center; border-style:double;" "=""--> <!--height:40px可设置行高-->
-		   <marquee behavior="alternate" scrollamount="1" style="font-size:20px; color:green;"><b>助力高效办公，清除烦人广告，打造清爽主页；如需要其它的常用网址，请@胡佳</b></marquee> <!--behavior,来回交替滚动-->
+		   <marquee behavior="alternate" scrollamount="1" style="font-size:20px; color:green;"><b>助力高效办公，清除烦人广告，打造清爽主页；如需要其它的常用网址，请微信 @胡佳 添加~</b></marquee> <!--behavior,来回交替滚动-->
       </div>
         <form action="https://www.baidu.com/s" method="get" target="_blank"> <!--get将请求参数拼接在请求路径后面,-blank新页面打开,_self当前页面打开-->
           <fieldset style="text-align:center; width:90%; height:auto; background-color:#ccffcc; opacity:0.9">  <!--类似带选项卡样式的方框-->
