--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <a href="http://tool.mkblog.cn/">孟坤工具</a> • 
         <a href="http://zmdisk.ysepan.com/">郑码相关</a> • 
         <a href="https://www.china-e.com.cn/">中易中标</a> • 
-		<a href="https://www.china-e.com.cn/">微公号</a> • 
+		<a href="https://www.china-e.com.cn/">微信公号</a> • 
 		<a href="https://www.runoob.com/">菜鸟书社</a> • 
 		<a href="https://www.w3school.com.cn/index.html">W3School</a> • 
 		<a href="https://imgse.com/">免费图床</a> • 
