--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<a href="http://t.cn/E64tnD2">等待更新</a>
 	</div>
 	<!--div><a title="胡马依风" href="##" target="_self"><img src="https://s1.ax1x.com/2022/10/07/x8KTCq.jpg" /></a><form action="https://www.baidu.com/s"><input type="text" name="wd" autocomplete="off" id="search-kw" qsuginited="1" value="" width=90px;><input type="hidden" name="ie" value="utf-8"><button id="search-btn" type="submit" class="">百度一下</button></form></div-->
-	<div><img src="https://s1.ax1x.com/2022/10/07/x8KTCq.jpg">
+	<div><img src="https://pic.jitudisk.com/public/2022/10/21/7f2bb89361bc7.jpg">
 		   <!--style="background-color:#07553A; color:#CFD468; width:90%; font-weight:bold; text-align:center; border-style:double;" "=""--> <!--height:40px可设置行高-->
 		   <marquee behavior="alternate" scrollamount="1" style="font-size:14px; margin:5px;">助力高效办公，清除烦人广告，打造清爽主页；如还有其它常用网址，请微信 @胡佳 添加…</marquee> <!--behavior,来回交替滚动-->
         <form action="https://www.baidu.com/s" method="get" target="_blank"> <!--get将请求参数拼接在请求路径后面,-blank新页面打开,_self当前页面打开-->
@@ -103,7 +103,7 @@
 		<a href="https://www.china-e.com.cn/">微信公号</a> • 
 		<a href="https://www.runoob.com/">菜鸟书社</a> • 
 		<a href="https://www.w3school.com.cn/index.html">W3School</a> • 
-		<a href="https://imgse.com/">免费图床</a> • 
+		<a href="https://pic.jitudisk.com/public/">极兔图床</a> • 
 		</fieldset>
     </div>
 	
