--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<!--div><a title="胡马依风" href="##" target="_self"><img src="https://s1.ax1x.com/2022/10/07/x8KTCq.jpg" /></a><form action="https://www.baidu.com/s"><input type="text" name="wd" autocomplete="off" id="search-kw" qsuginited="1" value="" width=90px;><input type="hidden" name="ie" value="utf-8"><button id="search-btn" type="submit" class="">百度一下</button></form></div-->
 	<div><img src="https://pic.jitudisk.com/public/2022/10/21/593f10e558b4b.jpg">
 		   <!--style="background-color:#07553A; color:#CFD468; width:90%; font-weight:bold; text-align:center; border-style:double;" "=""--> <!--height:40px可设置行高-->
-		   <marquee behavior="alternate" scrollamount="1" style="font-size:14px; margin:5px;">助力高效办公，清除烦人广告，打造清爽主页；如还有其它常用网址，请微信 @胡佳 添加…</marquee> <!--behavior,来回交替滚动-->
+		   <marquee behavior="alternate" scrollamount="1" style="font-size:14px; margin:5px;">1、助力高效办公，清除烦人广告，打造清爽主页；添加其它常用网址，请微信@胡佳…  2、网站升级：手机也可以很舒服地显示了；</marquee> <!--behavior,来回交替滚动-->
         <form action="https://www.baidu.com/s" method="get" target="_blank"> <!--get将请求参数拼接在请求路径后面,-blank新页面打开,_self当前页面打开-->
           <fieldset style="text-align:center; width:90%; height:auto; background-color:#ccffcc; opacity:0.9">  <!--类似带选项卡样式的方框-->
             <legend style="text-align:left">★ 点击搜索，一键而知天下 ★</legend>     <!--选项卡标签位置要显示的文字-->  <!--button标签也可以建按钮-->
@@ -61,9 +61,9 @@
 		<a href="https://www.zdic.net/">中华汉典</a> • 
         <a href="https://www.gushiwen.cn/">古诗文网</a> • 
         <a href="https://www.zxx.edu.cn/syncClassroom/" style="color:red"><b>智慧中小学</b></a> • 
-        <a href="http://wx.qq.com/">网页微信</a> • 
+        <a href="http://wx.qq.com/" style="color:purple"><b>网页微信</b></a> • 
         <a href="http://im.dingtalk.com/">网页钉钉</a> • 
-        <a href="http://www.huanqiu.com/">环球</a> • 
+        <a href="http://www.huanqiu.com/" style="color:Orange"><b>考后发成绩</b></a> • 
 		<a href="http://www.china.com.cn/">中国网</a> • 
         <a href="http://www.xinhuanet.com/">新华网</a> • 
         <a href="http://www.people.com.cn/">人民网</a> • 
@@ -100,7 +100,7 @@
         <a href="http://tool.mkblog.cn/">孟坤工具</a> • 
         <a href="http://zmdisk.ysepan.com/">郑码相关</a> • 
         <a href="https://www.china-e.com.cn/">中易中标</a> • 
-		<a href="https://www.china-e.com.cn/">微信公号</a> • 
+		<a href="https://mp.weixin.qq.com/">微信公号</a> • 
 		<a href="https://www.runoob.com/">菜鸟书社</a> • 
 		<a href="https://www.w3school.com.cn/index.html">W3School</a> • 
 		<a href="https://pic.jitudisk.com/public/">极兔图床</a> • 
