--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <a href="https://www.zxx.edu.cn/syncClassroom/" style="color:red"><b>智慧中小学</b></a> • 
         <a href="http://wx.qq.com/" style="color:purple"><b>网页微信</b></a> • 
         <a href="http://im.dingtalk.com/">网页钉钉</a> • 
-        <a href="http://www.huanqiu.com/" style="color:Orange"><b>考后发成绩</b></a> • 
+        <a href="http://www.huanqiu.com/" style="color:red"><b>考后发成绩</b></a> • 
 		<a href="http://www.china.com.cn/">中国网</a> • 
         <a href="http://www.xinhuanet.com/">新华网</a> • 
         <a href="http://www.people.com.cn/">人民网</a> • 
