--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<!--div><a title="胡马依风" href="##" target="_self"><img src="https://s1.ax1x.com/2022/10/07/x8KTCq.jpg" /></a><form action="https://www.baidu.com/s"><input type="text" name="wd" autocomplete="off" id="search-kw" qsuginited="1" value="" width=90px;><input type="hidden" name="ie" value="utf-8"><button id="search-btn" type="submit" class="">百度一下</button></form></div-->
 	<div><img src="https://pic.jitudisk.com/public/2022/10/21/593f10e558b4b.jpg">
 		   <!--style="background-color:#07553A; color:#CFD468; width:90%; font-weight:bold; text-align:center; border-style:double;" "=""--> <!--height:40px可设置行高-->
-		   <marquee behavior="alternate" scrollamount="1" style="font-size:14px; margin:5px;">1、助力高效办公，清除烦人广告，打造清爽主页；添加其它常用网址，请微信@胡佳…  2、网站升级：手机也可以很舒服地显示了；</marquee> <!--behavior,来回交替滚动-->
+		   <marquee behavior="alternate" scrollamount="1" style="font-size:14px; margin:5px;">1、清除烦人广告，助力清爽办公；添加其它常用网址，请微信@胡佳…  2、更新自适应功能，手机也可以很舒服地显示页面了；10.21</marquee> <!--behavior,来回交替滚动-->
         <form action="https://www.baidu.com/s" method="get" target="_blank"> <!--get将请求参数拼接在请求路径后面,-blank新页面打开,_self当前页面打开-->
           <fieldset style="text-align:center; width:90%; height:auto; background-color:#ccffcc; opacity:0.9">  <!--类似带选项卡样式的方框-->
             <legend style="text-align:left">★ 点击搜索，一键而知天下 ★</legend>     <!--选项卡标签位置要显示的文字-->  <!--button标签也可以建按钮-->
