--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<a href="https://www.zxxk.com/" target="_self">中学学科</a> • 
         <a href="http://www.zxls.com">历史园地</a> • 
 		<a href="http://www.henanjk.com/" style="color:red"><b>教考资源</b></a> • 
-		<a href="https://www.douyu.com">等待更新</a> • 
+		<a href="http://www.hner.cn/" style="color:">省基教资源</a> • 
         <a href="http://kan.2345.com/?kmengkunsoftware">等待更新</a> • 
 	    <a href="http://t.cn/E64tnD2">等待更新</a> • 
 		<a href="https://www.zxxk.com/" target="_self">中学学科</a> • 
@@ -60,7 +60,7 @@
 		<a href="https://www.jxjyedu.org.cn/">省继教学会</a> • 
         <a href="http://zzzj.hnjxedu.org.cn">郑专技在线</a> • 
         <a href="http://zzzj.ghlearning.com">郑专技培训</a> • 
-        <a href="http://mail.sina.com.cn/">河南学习网</a> • 
+        <a href="https://www.henanxuexi.com/">河南学习网</a> • 
         <a href="https://wp.pep.com.cn/web/index.php?/login/index/57">统编科培训</a> • 
         <a href="http://hnzj.chinahrt.com/">省专技继教</a> • 
         <a href="https://www.xueanquan.com/" style="color:blue"><b>安全教育网</b></a> • 
