--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
 	    <legend>教学 ☆ 管理</legend>
 		教学资源：
 		<a href="https://www.zxxk.com/" target="_self">中学学科</a> • 
-        <a href="http://www.zxls.com">历史园地</a> • 
+                <a href="http://www.zxls.com">历史园地</a> • 
 		<a href="http://www.henanjk.com/" style="color:red"><b>教考资源</b></a> • 
-		<a href="http://www.hner.cn/" style="color:purple">省基教资源</a> • 
-        <a href="http://kan.2345.com/?kmengkunsoftware">等待更新</a> • 
-	    <a href="http://t.cn/E64tnD2">等待更新</a> • 
+		<a href="http://www.hner.cn/" style="color:blue"><b>省基教资源</b></a> • 
+                <a href="http://kan.2345.com/?kmengkunsoftware">等待更新</a> • 
+	        <a href="http://t.cn/E64tnD2">等待更新</a> • 
 		<a href="https://www.zxxk.com/" target="_self">中学学科</a> • 
-        <a href="http://www.zxls.com">历史园地</a> • 
+                <a href="http://www.zxls.com">历史园地</a> • 
 		<a href="http://www.henanjk.com/" style="color:red"><b>教考资源</b></a> • 
 		<a href="https://www.douyu.com">等待更新</a> • 
-        <a href="http://kan.2345.com/?kmengkunsoftware">等待更新</a> • 
-	    <a href="http://t.cn/E64tnD2">等待更新</a>
+                <a href="http://kan.2345.com/?kmengkunsoftware">等待更新</a> • 
+	        <a href="http://t.cn/E64tnD2">等待更新</a>
 		<br>继续教育：
 		<a href="https://hrss.henan.gov.cn/hnzc/" style="color:red"><b>河南职称网</b></a> • ‎
 		<a href="https://www.jxjyedu.org.cn/">省继教学会</a> • 
