--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<a href="http://www.henanjk.com/" style="color:red"><b>教考资源</b></a> • 
 		<a href="http://www.hner.cn/" style="color:blue">省基教资源</a> • 
 		<a href="http://kan.2345.com/?kmengkunsoftware">等待更新</a> • 
-		<a href="https://www.willclass.com/" style="color:"><b>会课平台</b></a> • 
+		<a href="https://www.willclass.com/" style="color:red"><b>会课平台</b></a> • 
 		<a href="https://www.zxxk.com/">中学学科</a> • 
 		<a href="http://www.zxls.com">历史园地</a> • 
 		<a href="http://www.henanjk.com/" style="color:red"><b>教考资源</b></a> • 
