--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 		.ceshi {font-size:40px; color:blue; width:90%;line-height:20px; font-weight:bolder; text-shadow: 2px 4px 4px orange;}
 		fieldset{width:90%; height:auto; border-radius:5px; text-align:left; border: 1px solid brown; margin:auto; }
 		a:link{text-decoration: none;}
-		a:active{text-decoration:blink}
 		a:hover{text-decoration:underline;}
-		a:visited{text-decoration: none;} 　　 
 	
 	</style>
 	<base target="_blank">
@@ -133,8 +131,9 @@
 		</fieldset>
 	</div>
 	<br>
-	<div>
-		<span class=>Copyright © 2022 版权所有 All Rights Reserved.</span> | 
+	<br>
+	<div style="font-size:12px">
+		<span>Copyright © 2022 版权所有 All Rights Reserved.</span> | 
 		<a href="https://www.china-e.com.cn/zm.exe">郑码输入法</a> | 
 		<a href="javascript:alert('打开微信，搜索公众号【zmsigao】即可关注！');" target="_self">四高公众号</a> | 
 		<nobr>做博学之人，养浩然之气 | 网站维护：胡马依风</nobr>
