--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
 		<a href="https://wp.pep.com.cn/web/index.php?/login/index/57">统编科培训</a> • 
 		<a href="http://hnzj.chinahrt.com/">省专技继教</a> • 
 		<a href="https://www.xueanquan.com/" class="ys2">安全教育平台</a> • 
-		<a href="http://kan.2345.com/?kmengkunsoftware">资源更新中</a> • 
+		<a href="http://www.hndyjyfw.gov.cn/" class="ys">省党教服务网</a> • 
 		<a href="https://www.toutiao.com">资源更新中</a>
 		<br>带班必备：
 		<a href="http://www.ys168.com/" class="ys2">永硕网盘</a> • 
 		<a href="https://www.zxx.edu.cn/syncClassroom/" class="ys">智慧中小学</a> • 
-		<a href="http://wx.qq.com/">网页微信</a> • 
+		<a href="https://filehelper.weixin.qq.com/">微信传文件</a> • 
 		<a href="http://im.dingtalk.com/" class="ys">网页钉钉</a> • 
 		<a href="https://f.wps.cn/enquiry/create/" class="ys2">考后发成绩</a> • 
 		<a href="https://www.zdic.net/">中华汉典</a> • 
