--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		<br>带班必备：
 		<a href="http://www.ys168.com/" class="ys2">永硕网盘</a> • 
 		<a href="https://www.zxx.edu.cn/syncClassroom/" class="ys">智慧中小学</a> • 
-		<a href="https://filehelper.weixin.qq.com/">微信传文件</a> • 
+		<a href="https://filehelper.weixin.qq.com/" class="ys2">微信传文件</a> • 
 		<a href="http://im.dingtalk.com/" class="ys">网页钉钉</a> • 
 		<a href="https://f.wps.cn/enquiry/create/" class="ys2">考后发成绩</a> • 
 		<a href="https://www.zdic.net/">中华汉典</a> • 
