--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<a href="https://www.jxjyedu.org.cn/">省继教学会</a> • 
 		<a href="http://zzzj.hnjxedu.org.cn">郑专技在线</a> • 
 		<a href="http://zzzj.ghlearning.com">郑专技培训</a> • 
-		<a href="http://www.hner.cn/" class="ys">河南学习网</a> • 
+		<a href="https://www.henanxuexi.com/" class="ys">河南学习网</a> • 
 		<a href="https://wp.pep.com.cn/web/index.php?/login/index/57">统编科培训</a> • 
 		<a href="http://hnzj.chinahrt.com/">省专技继教</a> • 
 		<a href="https://www.xueanquan.com/" class="ys2">安全教育平台</a> • 
