--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 		<a href="http://hnzj.chinahrt.com/">省专技继教</a> • 
 		<a href="https://www.xueanquan.com/" class="ys2">安全教育平台</a> • 
 		<a href="http://www.hndyjyfw.gov.cn/" class="ys">省党教服务网</a> • 
+		<a href="https://www.hateacher.cn/" class="ys2">省教师教育网</a> • 
 		<a href="https://www.toutiao.com">资源更新中</a>
 		<br>带班必备：
 		<a href="http://www.ys168.com/" class="ys2">永硕网盘</a> • 
