--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		<a href="http://hnzj.chinahrt.com/">省专技继教</a> • 
 		<a href="http://www.hndyjyfw.gov.cn/" class="ys">省党教服务网</a> • 
 		<a href="https://www.hateacher.cn/" class="ys2">省教师教育网</a> • 
-		<a href="https://www.toutiao.com">资源更新中</a>
+		<a href="https://www.smartedu.cn/">国家智慧教育平台</a>
 		<br>带班必备：
 		<a href="http://www.ys168.com/" class="ys2">永硕网盘</a> • 
 		<a href="https://www.zxx.edu.cn/syncClassroom/" class="ys">智慧中小学</a> • 
@@ -86,7 +86,7 @@
 		<a href="https://www.xueanquan.com/" class="ys2">安全教育平台</a> • 
 		<a href="https://gaokao.chsi.com.cn/">阳光高考</a> • 
 		<a href="http://www.haeea.cn/">省招生办</a> • 
-		<a href="http://www.heao.com.cn/main/html/">省招考网</a>
+		<a href="http://www.heao.com.cn/main/html/">省招考网</a> • 
 		<a href="http://kan.2345.com/?kmengkunsoftware">资源更新中</a>
 		</fieldset>
 
