--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
 		<legend>教学 ☆ 管理</legend>
 		教学资源：
 		<a href="https://www.zxxk.com/" class="ys">中学学科网</a> • 
-		<a href="http://www.zxls.com">历史园地</a> • 
+		<a href="http://www.zxls.com">_历史园地_</a> • 
 		<a href="http://www.henanjk.com/" class="ys">教考资源网</a> • 
 		<a href="http://www.hner.cn/" >省基教资源</a> • 
 		<a href="http://kan.2345.com/?kmengkunsoftware">资源更新中</a> • 
-		<a href="https://www.willclass.com/" class="ys">会课平台</a> • 
+		<a href="https://www.willclass.com/" class="ys">_会课平台_</a> • 
 		<a href="https://www.zxxk.com/">中学学科网</a> • 
-		<a href="http://www.zxls.com">历史园地</a> • 
-		<a href="http://www.henanjk.com/">教考资源</a> • 
+		<a href="http://www.zxls.com">_历史园地_</a> • 
+		<a href="http://www.henanjk.com/">_教考资源_</a> • 
 		<a href="http://kan.2345.com/?kmengkunsoftware">资源更新中</a> • 
 		<a href="http://kan.2345.com/?kmengkunsoftware">资源更新中</a>
 		<br>继续教育：
