--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
 		<a href="http://kan.2345.com/?kmengkunsoftware">资源更新中</a> • 
 		<a href="https://www.toutiao.com">资源更新中</a>
 		<br>软件下载：
-		<a href="https://dldir1.qq.com/weixin/Windows/WeChatSetup.exe">微信</a> • 
-		<a href="https://down7.huorong.cn/sysdiag-full-5.0.70.1-2022.10.26.1.exe">火绒安全</a> • 
-		<a href="https://dtapp-pub.dingtalk.com/dingtalk-desktop/win_downloader/dingtalk_downloader.exe">钉钉</a> • 
+		<a href="https://dldir1.qq.com/weixin/Windows/WeChatSetup.exe">微信桌面版</a> • 
+		<a href="https://down7.huorong.cn/sysdiag-full-5.0.70.1-2022.10.26.1.exe">_火绒安全_</a> • 
+		<a href="https://dtapp-pub.dingtalk.com/dingtalk-desktop/win_downloader/dingtalk_downloader.exe">钉钉桌面版</a> • 
 		<a href="https://ncre.neea.edu.cn/res/Home/2012/1ab1f38f3a81af338dbb4f6495568f28.rar">纯净版WPS</a> • 
-		<a href="https://www.winrar.com.cn/download/wrar602scp.exe">压缩软件</a> • 
-		<a href="http://www.winrar.com.cn/download.htm">RAR官网</a> • 
+		<a href="https://www.winrar.com.cn/download/wrar602scp.exe">_压缩软件_</a> • 
+		<a href="http://www.winrar.com.cn/download.htm">_"RAR"官网_</a> • 
 		<a href="https://dl.360safe.com/drvmgr/gwwk__360DrvMgrInstaller_net.exe">360驱动</a> • 
 		<a href="https://www.microsoft.com/zh-cn/edge?form=MA13FJ">Edge浏览器</a> • 
 		<a href="https://www.google.cn/chrome/?standalone=1&platform=win64" class="ys">Chrome离线</a> • 
