--- a/index.html
+++ b/index.html
@@ -53,16 +53,15 @@
 		<legend>教学 ☆ 管理</legend>
 		教学资源：
 		<a href="https://www.zxxk.com/" class="ys">中学学科网</a> • 
-		<a href="http://www.zxls.com">_历史园地_</a> • 
+		<a href="http://www.zxls.com">历史☆园地</a> • 
 		<a href="http://www.henanjk.com/" class="ys">教考资源网</a> • 
 		<a href="http://www.hner.cn/" >省基教资源</a> • 
 		<a href="http://kan.2345.com/?kmengkunsoftware">资源更新中</a> • 
-		<a href="https://www.willclass.com/" class="ys">_会课平台_</a> • 
+		<a href="https://www.willclass.com/" class="ys">会课☆平台</a> • 
 		<a href="https://www.zxxk.com/">中学学科网</a> • 
-		<a href="http://www.zxls.com">_历史园地_</a> • 
-		<a href="http://www.henanjk.com/">_教考资源_</a> • 
-		<a href="http://kan.2345.com/?kmengkunsoftware">资源更新中</a> • 
-		<a href="http://kan.2345.com/?kmengkunsoftware">资源更新中</a>
+		<a href="http://www.zxls.com">历史☆园地</a> • 
+		<a href="http://www.henanjk.com/">教考资源</a> • 
+		<a href="http://kan.2345.com/?kmengkunsoftware">资源更新</a>
 		<br>继续教育：
 		<a href="https://hrss.henan.gov.cn/hnzc/" class="ys">河南职称网</a> • ‎
 		<a href="https://www.jxjyedu.org.cn/">省继教学会</a> • 
@@ -74,17 +73,17 @@
 		<a href="https://www.hateacher.cn/" class="ys2">省教师教育网</a> • 
 		<a href="https://www.smartedu.cn/">国家智慧教育平台</a>
 		<br>带班必备：
-		<a href="http://www.ys168.com/" class="ys2">_永硕网盘_</a> • 
+		<a href="http://www.ys168.com/" class="ys2">永硕☆网盘</a> • 
 		<a href="https://filehelper.weixin.qq.com/" class="ys2">微信传文件</a> • 
-		<a href="http://im.dingtalk.com/" class="ys">_网页钉钉_</a> • 
+		<a href="http://im.dingtalk.com/" class="ys">网页☆钉钉</a> • 
 		<a href="https://f.wps.cn/enquiry/create/" class="ys2">考后发成绩</a> • 
-		<a href="https://www.zdic.net/">_中华汉典_</a> • 
-		<a href="https://www.gushiwen.cn/">_古诗文网_</a> • 
-		<a href="https://www.xxt.cn/" class="ys">_校 讯 通_</a> • 
-		<a href="https://www.xueanquan.com/" class="ys2">安全教育平台</a> • 
-		<a href="https://gaokao.chsi.com.cn/">_阳光高考_</a> • 
-		<a href="http://www.haeea.cn/">_省招生办_</a> • 
-		<a href="http://www.heao.com.cn/main/html/">_省招考网_</a> • 
+		<a href="https://www.zdic.net/">中华☆汉典</a> • 
+		<a href="https://www.gushiwen.cn/">古诗☆文网</a> • 
+		<a href="https://www.xxt.cn/" class="ys">校☆讯☆通</a> • 
+		<a href="https://www.xueanquan.com/" class="ys2">安全☆教育</a> • 
+		<a href="https://gaokao.chsi.com.cn/">省阳光高考</a> • 
+		<a href="http://www.haeea.cn/">河南招生办</a> • 
+		<a href="http://www.heao.com.cn/main/html/">河南招考网</a> • 
 		</fieldset>
 
 	  <fieldset>
@@ -104,11 +103,11 @@
 		<a href="https://www.toutiao.com">资源更新中</a>
 		<br>软件下载：
 		<a href="https://dldir1.qq.com/weixin/Windows/WeChatSetup.exe">微信桌面版</a> • 
-		<a href="https://down7.huorong.cn/sysdiag-full-5.0.70.1-2022.10.26.1.exe">_火绒安全_</a> • 
+		<a href="https://down7.huorong.cn/sysdiag-full-5.0.70.1-2022.10.26.1.exe">火绒☆安全</a> • 
 		<a href="https://dtapp-pub.dingtalk.com/dingtalk-desktop/win_downloader/dingtalk_downloader.exe">钉钉桌面版</a> • 
 		<a href="https://ncre.neea.edu.cn/res/Home/2012/1ab1f38f3a81af338dbb4f6495568f28.rar">纯净版WPS</a> • 
-		<a href="https://www.winrar.com.cn/download/wrar602scp.exe">_压缩软件_</a> • 
-		<a href="http://www.winrar.com.cn/download.htm">_"RAR"官网_</a> • 
+		<a href="https://www.winrar.com.cn/download/wrar602scp.exe">压缩软件</a> • 
+		<a href="http://www.winrar.com.cn/download.htm">"RAR"官网</a> • 
 		<a href="https://dl.360safe.com/drvmgr/gwwk__360DrvMgrInstaller_net.exe">360驱动</a> • 
 		<a href="https://www.microsoft.com/zh-cn/edge?form=MA13FJ">Edge浏览器</a> • 
 		<a href="https://www.google.cn/chrome/?standalone=1&platform=win64" class="ys">Chrome离线</a> • 
