--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 		<a href="https://www.zxxk.com/">中学学科网</a> • 
 		<a href="http://www.zxls.com">历史☆园地</a> • 
 		<a href="http://www.henanjk.com/">教考资源</a> • 
-		<a href="http://kan.2345.com/?kmengkunsoftware">资源更新</a>
+		<a href="http://kan.2345.com/?kmengkunsoftware">资源更新中</a>
 		<br>继续教育：
-		<a href="https://hrss.henan.gov.cn/hnzc/" class="ys">河南职称网</a> • ‎
+		<a href="https://hrss.henan.gov.cn/hnzc/" class="ys">河南职称网</a> • 
 		<a href="https://www.jxjyedu.org.cn/">省继教学会</a> • 
 		<a href="http://zzzj.hnjxedu.org.cn">郑专技在线</a> • 
 		<a href="http://zzzj.ghlearning.com">郑专技培训</a> • 
