--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
 		<a href="http://kan.2345.com/?kmengkunsoftware">资源更新中</a> • 
 		<a href="https://www.toutiao.com">资源更新中</a>
 		<br>软件下载：
-		<a href="https://dldir1.qq.com/weixin/Windows/WeChatSetup.exe">微信桌面版</a> • 
-		<a href="https://down7.huorong.cn/sysdiag-full-5.0.70.1-2022.10.26.1.exe">火绒☆安全</a> • 
-		<a href="https://dtapp-pub.dingtalk.com/dingtalk-desktop/win_downloader/dingtalk_downloader.exe">钉钉桌面版</a> • 
+		<a href="https://dldir1.qq.com/weixin/Windows/WeChatSetup.exe">桌面微信</a> • 
+		<a href="https://down7.huorong.cn/sysdiag-full-5.0.70.1-2022.10.26.1.exe">火绒安全</a> • 
+		<a href="https://dtapp-pub.dingtalk.com/dingtalk-desktop/win_downloader/dingtalk_downloader.exe">桌面钉钉</a> • 
 		<a href="https://ncre.neea.edu.cn/res/Home/2012/1ab1f38f3a81af338dbb4f6495568f28.rar">纯净版WPS</a> • 
 		<a href="https://www.winrar.com.cn/download/wrar602scp.exe">压缩软件</a> • 
 		<a href="http://www.winrar.com.cn/download.htm">"RAR"官网</a> • 
@@ -113,7 +113,7 @@
 		<a href="https://www.google.cn/intl/zh-CN/chrome/" class="ys2">Chrome在线</a> • 
 		<a href="http://www.people.com.cn/">资源更新中</a>
 		<br>网络工程：
-		<a href="http://www.ys168.com/" class="ys2">永硕☆网盘</a> • 
+		<a href="http://www.ys168.com/" class="ys2">永硕网盘</a> • 
 		<a href="http://mail.qq.com/">腾讯邮箱</a> • 
 		<a href="https://www.flvcd.com/">硕鼠下载</a> • 
 		<a href="http://tool.mkblog.cn/">孟坤工具</a> • 
@@ -123,7 +123,7 @@
 		<a href="https://www.runoob.com/">菜鸟书社</a> • 
 		<a href="https://www.w3school.com.cn/index.html">W3School</a> • 
 		<a href="https://pic.jitudisk.com/public/">极兔图床</a> • 
-		<a href="http://www.xinhuanet.com/">资源更新中</a>
+		<a href="http://www.xinhuanet.com/">资源更新</a>
 		</fieldset>
 	</div>
 	<br style="line-height:30px;">
