--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		<a href="https://www.xueanquan.com/" class="ys2">安全☆教育</a> • 
 		<a href="https://gaokao.chsi.com.cn/">省阳光高考</a> • 
 		<a href="http://www.haeea.cn/">河南招生办</a> • 
-		<a href="http://www.heao.com.cn/main/html/">河南招考网</a> • 
+		<a href="http://www.heao.com.cn/main/html/">河南招考网</a>
 		</fieldset>
 
 	  <fieldset>
@@ -96,22 +96,22 @@
 		<a href="https://www.hihonor.com/cn/">荣耀商城</a> • 
 		<a href="https://www.tmall.com">天猫购物</a> • 
 		<a href="https://www.jd.com/" class="ys">品质京东</a> • 
-		<a href="http://www.people.com.cn/">资源更新中</a> • 
-		<a href="https://www.toutiao.com">资源更新中</a> • 
-		<a href="http://kan.2345.com/?kmengkunsoftware">资源更新中</a> • 
-		<a href="https://www.toutiao.com">资源更新中</a>
+		<a href="http://www.people.com.cn/">资源更新</a> • 
+		<a href="https://www.toutiao.com">资源更新</a> • 
+		<a href="http://kan.2345.com/?kmengkunsoftware">资源更新</a> • 
+		<a href="https://www.toutiao.com">资源更新</a>
 		<br>软件下载：
 		<a href="https://dldir1.qq.com/weixin/Windows/WeChatSetup.exe">桌面微信</a> • 
 		<a href="https://down7.huorong.cn/sysdiag-full-5.0.70.1-2022.10.26.1.exe">火绒安全</a> • 
 		<a href="https://dtapp-pub.dingtalk.com/dingtalk-desktop/win_downloader/dingtalk_downloader.exe">桌面钉钉</a> • 
 		<a href="https://ncre.neea.edu.cn/res/Home/2012/1ab1f38f3a81af338dbb4f6495568f28.rar">纯净版WPS</a> • 
 		<a href="https://www.winrar.com.cn/download/wrar602scp.exe">压缩软件</a> • 
-		<a href="http://www.winrar.com.cn/download.htm">"RAR"官网</a> • 
+		<a href="http://www.winrar.com.cn/download.htm">RAR官网</a> • 
 		<a href="https://dl.360safe.com/drvmgr/gwwk__360DrvMgrInstaller_net.exe">360驱动</a> • 
 		<a href="https://www.microsoft.com/zh-cn/edge?form=MA13FJ">Edge浏览器</a> • 
 		<a href="https://www.google.cn/chrome/?standalone=1&platform=win64" class="ys">Chrome离线</a> • 
 		<a href="https://www.google.cn/intl/zh-CN/chrome/" class="ys2">Chrome在线</a> • 
-		<a href="http://www.people.com.cn/">资源更新中</a>
+		<a href="http://www.people.com.cn/">资源更新</a>
 		<br>网络工程：
 		<a href="http://www.ys168.com/" class="ys2">永硕网盘</a> • 
 		<a href="http://mail.qq.com/">腾讯邮箱</a> • 
