--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
 		<a href="https://www.runoob.com/">菜鸟书社</a> • 
 		<a href="https://www.w3school.com.cn/index.html">W3School</a> • 
 		<a href="https://pic.jitudisk.com/public/">极兔图床</a> • 
+		<a href="https://pic.jitudisk.com/public/">资源更新</a> • 
 		<a href="http://www.xinhuanet.com/">资源更新</a>
 		</fieldset>
 	</div>
