--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<a href="http://www.hner.cn/" >省基教资源</a> • 
 		<a href="http://kan.2345.com/?kmengkunsoftware">资源更新中</a> • 
 		<a href="https://www.willclass.com/" class="ys">会课☆平台</a> • 
-		<a href="https://www.zxxk.com/">中学学科网</a> • 
+		<a href="http://pengyou2038.ysepan.com/">教研组网盘</a> • 
 		<a href="http://www.zxls.com">历史☆园地</a> • 
 		<a href="http://www.henanjk.com/">教考资源</a> • 
 		<a href="http://kan.2345.com/?kmengkunsoftware">资源更新中</a>
