--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	</div>
 
 	<div class="ceshi">
-		<b>教学教研网站导航</b><br>
+		<b>教研站点导航</b><br>
 		<b style="font-size:12px; letter-spacing:1px;">SIGAO ZHONGMU</b>
 	</div>
 	
