--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 		<a href="https://www.willclass.com/" class="ys">会课☆平台</a> • 
 		<a href="http://pengyou2038.ysepan.com/" class="ys2">教研组网盘</a> • 
 		<a href="http://www.zxls.com">历史☆园地</a> • 
-		<a href="http://www.henanjk.com/">教考资源</a> • 
-		<a href="http://kan.2345.com/?kmengkunsoftware">资源更新中</a>
+		<a href="http://sxh.hitecloud.cn/">鸿合师享汇</a> • 
+		<a href="https://study.seewoedu.cn/">希沃☆学苑</a>
 		<br>继续教育：
 		<a href="https://hrss.henan.gov.cn/hnzc/" class="ys">河南职称网</a> • 
 		<a href="https://www.jxjyedu.org.cn/">省继教学会</a> • 
