--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<a href="http://www.zxls.com">历史☆园地</a> • 
 		<a href="http://www.henanjk.com/" class="ys">教考资源网</a> • 
 		<a href="http://www.hner.cn/" >省基教资源</a> • 
-		<a href="http://kan.2345.com/?kmengkunsoftware">资源更新中</a> • 
+		<a href="http://www.jyeoo.com/">菁☆优☆网</a> • 
 		<a href="https://www.willclass.com/" class="ys">会课☆平台</a> • 
 		<a href="http://pengyou2038.ysepan.com/" class="ys2">教研组网盘</a> • 
 		<a href="http://www.zxls.com">历史☆园地</a> • 
@@ -70,6 +70,7 @@
 		<a href="http://zzzj.ghlearning.com">郑专技培训</a> • 
 		<a href="https://www.henanxuexi.com/" class="ys">河南学习网</a> • 
 		<a href="http://hnzj.chinahrt.com/">省专技继教</a> • 
+		<a href="https://hnzj.ghlearning.com/">省专技在线</a> • 
 		<a href="http://www.hndyjyfw.gov.cn/" class="ys">省党教服务网</a> • 
 		<a href="https://www.hateacher.cn/" class="ys2">省教师教育网</a> • 
 		<a href="https://www.smartedu.cn/">国家智慧教育平台</a>
