--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 		教学资源：
 		<a href="https://www.zxxk.com/" class="ys">中学学科网</a> • 
 		<a href="http://www.zxls.com">历史☆园地</a> • 
-		<a href="http://www.henanjk.com/" class="ys">教考资源网</a> • 
+		<a href="http://www.henanjk.com/" class="ys">教考☆资源</a> • 
 		<a href="http://www.hner.cn/" >省基教资源</a> • 
 		<a href="http://www.jyeoo.com/">菁☆优☆网</a> • 
 		<a href="https://www.willclass.com/" class="ys">会课☆平台</a> • 
-		<a href="http://pengyou2038.ysepan.com/" class="ys2">教研组网盘</a> • 
+		<a href="http://pengyou2038.ysepan.com/" class="ys2">教研☆网盘</a> • 
 		<a href="http://www.zxls.com">历史☆园地</a> • 
 		<a href="http://sxh.hitecloud.cn/">鸿合师享汇</a> • 
 		<a href="https://study.seewoedu.cn/">希沃☆学苑</a>
@@ -73,14 +73,14 @@
 		<a href="https://hnzj.ghlearning.com/">省专技在线</a> • 
 		<a href="http://www.hndyjyfw.gov.cn/" class="ys">省党教服务网</a> • 
 		<a href="https://www.hateacher.cn/" class="ys2">省教师教育网</a> • 
-		<a href="https://www.smartedu.cn/">国家智慧教育平台</a>
+		<a href="https://basic.smartedu.cn/" class="ys">智慧中小学</a>
 		<br>带班必备：
 		<a href="https://www.xxt.cn/" class="ys">校☆讯☆通</a> • 
 		<a href="https://filehelper.weixin.qq.com/" class="ys2">微信传文件</a> • 
 		<a href="http://im.dingtalk.com/" class="ys">网页☆钉钉</a> • 
 		<a href="https://f.wps.cn/enquiry/create/" class="ys2">考后发成绩</a> • 
 		<a href="https://www.zdic.net/">中华☆汉典</a> • 
-		<a href="https://www.gushiwen.cn/">古诗☆文网</a> • 
+		<a href="https://www.gushiwen.cn/">古诗文☆网</a> • 
 		<a href="https://www.xueanquan.com/" class="ys2">安全☆教育</a> • 
 		<a href="https://gaokao.chsi.com.cn/">省阳光高考</a> • 
 		<a href="http://www.haeea.cn/">河南招生办</a> • 
