--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
 		<legend>教学 ☆ 管理</legend>
 		教学资源：
 		<a href="https://www.zxxk.com/" class="ys">中学学科网</a> • 
-		<a href="http://www.zxls.com">历史☆园地</a> • 
+		<a href="http://www.zxls.com">历史园地</a> • 
 		<a href="http://www.henanjk.com/" class="ys">教考☆资源</a> • 
 		<a href="http://www.hner.cn/" >省基教资源</a> • 
 		<a href="http://www.jyeoo.com/">菁☆优☆网</a> • 
 		<a href="https://www.willclass.com/" class="ys">会课☆平台</a> • 
 		<a href="http://pengyou2038.ysepan.com/" class="ys2">教研☆网盘</a> • 
-		<a href="http://www.zxls.com">历史☆园地</a> • 
+		<a href="https://basic.smartedu.cn/" class="ys">智慧中小学</a> • 
 		<a href="http://sxh.hitecloud.cn/">鸿合师享汇</a> • 
 		<a href="https://study.seewoedu.cn/">希沃☆学苑</a>
 		<br>继续教育：
-		<a href="https://hrss.henan.gov.cn/hnzc/" class="ys">河南职称网</a> • 
+		<a href="https://hnzj.59iedu.com/" class="ys">省专技学习</a> • 
 		<a href="https://www.jxjyedu.org.cn/">省继教学会</a> • 
 		<a href="http://zzzj.hnjxedu.org.cn">郑专技在线</a> • 
 		<a href="http://zzzj.ghlearning.com">郑专技培训</a> • 
@@ -73,7 +73,7 @@
 		<a href="https://hnzj.ghlearning.com/">省专技在线</a> • 
 		<a href="http://www.hndyjyfw.gov.cn/" class="ys">省党教服务网</a> • 
 		<a href="https://www.hateacher.cn/" class="ys2">省教师教育网</a> • 
-		<a href="https://basic.smartedu.cn/" class="ys">智慧中小学</a>
+		<a href="https://hrss.henan.gov.cn/hnzc/" class="ys">河南职称网</a>
 		<br>带班必备：
 		<a href="https://www.xxt.cn/" class="ys">校☆讯☆通</a> • 
 		<a href="https://filehelper.weixin.qq.com/" class="ys2">微信传文件</a> • 
