--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
 		<legend>教学 ☆ 管理</legend>
 		教学资源：
 		<a href="https://www.zxxk.com/" class="ys">中学学科网</a> • 
-		<a href="http://www.zxls.com">历史园地</a> • 
-		<a href="http://www.henanjk.com/" class="ys">教考☆资源</a> • 
+		<a href="http://www.zxls.com">历史一园地</a> • 
+		<a href="http://www.henanjk.com/" class="ys">教考资源网</a> • 
 		<a href="http://www.hner.cn/" >省基教资源</a> • 
-		<a href="http://www.jyeoo.com/">菁☆优☆网</a> • 
-		<a href="https://www.willclass.com/" class="ys">会课☆平台</a> • 
-		<a href="http://pengyou2038.ysepan.com/" class="ys2">教研☆网盘</a> • 
+		<a href="http://www.jyeoo.com/">高中菁优网</a> • 
+		<a href="https://www.willclass.com/" class="ys">会课一平台</a> • 
+		<a href="http://pengyou2038.ysepan.com/" class="ys2">教研组网盘</a> • 
 		<a href="https://basic.smartedu.cn/" class="ys">智慧中小学</a> • 
 		<a href="http://sxh.hitecloud.cn/">鸿合师享汇</a> • 
-		<a href="https://study.seewoedu.cn/">希沃☆学苑</a>
+		<a href="https://study.seewoedu.cn/">希沃一学苑</a>
 		<br>继续教育：
 		<a href="https://hnzj.59iedu.com/" class="ys">省专技学习</a> • 
 		<a href="https://www.jxjyedu.org.cn/">省继教学会</a> • 
@@ -75,13 +75,13 @@
 		<a href="https://www.hateacher.cn/" class="ys2">省教师教育网</a> • 
 		<a href="https://hrss.henan.gov.cn/hnzc/" class="ys">河南职称网</a>
 		<br>带班必备：
-		<a href="https://www.xxt.cn/" class="ys">校☆讯☆通</a> • 
+		<a href="https://www.xxt.cn/" class="ys">校一讯一通</a> • 
 		<a href="https://filehelper.weixin.qq.com/" class="ys2">微信传文件</a> • 
-		<a href="http://im.dingtalk.com/" class="ys">网页☆钉钉</a> • 
+		<a href="http://im.dingtalk.com/" class="ys">网页一钉钉</a> • 
 		<a href="https://f.wps.cn/enquiry/create/" class="ys2">考后发成绩</a> • 
-		<a href="https://www.zdic.net/">中华☆汉典</a> • 
-		<a href="https://www.gushiwen.cn/">古诗文☆网</a> • 
-		<a href="https://www.xueanquan.com/" class="ys2">安全☆教育</a> • 
+		<a href="https://www.zdic.net/">中华一汉典</a> • 
+		<a href="https://www.gushiwen.cn/">权威古诗文</a> • 
+		<a href="https://www.xueanquan.com/" class="ys2">安全教育网</a> • 
 		<a href="https://gaokao.chsi.com.cn/">省阳光高考</a> • 
 		<a href="http://www.haeea.cn/">河南招生办</a> • 
 		<a href="http://www.heao.com.cn/main/html/">河南招考网</a>
