--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 		<a href="https://www.henanxuexi.com/" class="ys">河南学习网</a> • 
 		<a href="http://hnzj.chinahrt.com/">省专技继教</a> • 
 		<a href="https://hnzj.ghlearning.com/">省专技在线</a> • 
-		<a href="http://www.hndyjyfw.gov.cn/" class="ys">省党教服务网</a> • 
-		<a href="https://www.hateacher.cn/" class="ys2">省教师教育网</a> • 
+		<a href="http://www.hndyjyfw.gov.cn/" class="ys">省党员教育</a> • 
+		<a href="https://www.hateacher.cn/" class="ys2">省教师教育</a> • 
 		<a href="https://hrss.henan.gov.cn/hnzc/" class="ys">河南职称网</a>
 		<br>带班必备：
 		<a href="https://www.xxt.cn/" class="ys">校一讯一通</a> • 
