--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
 		<a href="https://www.tmall.com">天猫购物</a> • 
 		<a href="https://www.jd.com/" class="ys">品质京东</a> • 
 		<a href="" class="ys3">品牌手机</a> • 
-		<a href="" class="ys3">渠道价格</a> • 
+		<a href="">渠道价格</a> • 
 		<a href="" class="ys3">价低保真</a> • 
-		<a href="" class="ys3">请找胡佳</a>
+		<a href="">请找胡佳</a>
 		<br>软件下载：
 		<a href="https://dldir1.qq.com/weixin/Windows/WeChatSetup.exe">桌面微信</a> • 
 		<a href="https://down7.huorong.cn/sysdiag-full-5.0.70.1-2022.10.26.1.exe">火绒安全</a> • 
