--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 	</div>
 	<br style="line-height:30px;">
 	<div style="font-size:12px">
-		<span>Copyright © 2022 版权所有 All Rights Reserved.</span> | 
+		<span>Copyright © 2022-2024 版权所有 All Rights Reserved.</span> | 
 		<a href="https://www.china-e.com.cn/zm.exe">郑码输入法</a> | 
 		<a href="javascript:alert('打开微信，搜索公众号【zmsigao】即可关注！');" target="_self">四高公众号</a> | 
 		<nobr>做博学之人，养浩然之气 | 网站维护：胡马依风</nobr>
