--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
 		<a href="http://sxh.hitecloud.cn/">鸿合师享汇</a> • 
 		<a href="https://study.seewoedu.cn/">希沃一学苑</a>
 		<br>继续教育：
-		<a href="http://jiaoshi.jyt.henan.gov.cn:8082/selfservice" class="ys">教师信息网</a> • 
 		<a href="https://hnzj.59iedu.com/" class="ys">省专技学习</a> • 
 		<a href="https://www.jxjyedu.org.cn/">省继教学会</a> • 
 		<a href="http://zzzj.hnjxedu.org.cn">郑专技在线</a> • 
@@ -91,6 +90,7 @@
 	  <fieldset>
 	  <legend>休闲 ☆ 生活</legend>
 		休闲淘宝：
+		<a href="http://jiaoshi.jyt.henan.gov.cn:8082/selfservice" class="ys">全国教师信息管理系统</a> • 
 		<a href="http://www.yac8.com/">书法鉴赏</a> • 
 		<a href="https://tv.cctv.com/lm/xwzk/">新闻周刊</a> • 
 		<a href="https://tv.cctv.com/lm/sjzk/">世界周刊</a> • 
