--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 	  <legend>休闲 ☆ 生活</legend>
 		休闲淘宝：
 		<a href="http://jiaoshi.jyt.henan.gov.cn:8082/selfservice" class="ys">全国教师信息管理系统</a> • 
+		<a href="https://manage.hnzjgl.gov.cn/">省专技人员继教信息管理系统</a> • 
 		<a href="http://www.yac8.com/">书法鉴赏</a> • 
 		<a href="https://tv.cctv.com/lm/xwzk/">新闻周刊</a> • 
 		<a href="https://tv.cctv.com/lm/sjzk/">世界周刊</a> • 
@@ -98,9 +99,7 @@
 		<a href="https://www.mi.com/">小米官网</a> • 
 		<a href="https://www.hihonor.com/cn/">荣耀商城</a> • 
 		<a href="https://www.tmall.com">天猫购物</a> • 
-		<a href="https://www.jd.com/" class="ys">品质京东</a> • 
-		<a href="" class="ys3">品牌手机</a> • 
-		<a href="">渠道价格</a>
+		<a href="https://www.jd.com/" class="ys">品质京东</a>
 		<br>软件下载：
 		<a href="https://dldir1.qq.com/weixin/Windows/WeChatSetup.exe">桌面微信</a> • 
 		<a href="https://down7.huorong.cn/sysdiag-full-5.0.70.1-2022.10.26.1.exe">火绒安全</a> • 
