--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 	  <fieldset>
 	  <legend>休闲 ☆ 生活</legend>
 		休闲淘宝：
-		<a href="http://jiaoshi.jyt.henan.gov.cn:8082/selfservice" class="ys">全国教师信息管理系统</a> • 
-		<a href="https://manage.hnzjgl.gov.cn/">省专技人员继教信息管理系统</a> • 
+		<a href="http://jiaoshi.jyt.henan.gov.cn:8082/selfservice" class="ys">全国教师信息管理</a> • 
+		<a href="https://manage.hnzjgl.gov.cn/">省专技人员继教信息管理</a> • 
 		<a href="http://www.yac8.com/">书法鉴赏</a> • 
 		<a href="https://tv.cctv.com/lm/xwzk/">新闻周刊</a> • 
 		<a href="https://tv.cctv.com/lm/sjzk/">世界周刊</a> • 
